<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_list_tip"
            android:textColor="@color/color_light_black"/>

        <TextView
            android:id="@+id/mTvListTitle"
            android:layout_toRightOf="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_light_black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mLayoutEdInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_editor_info"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_toRightOf="@+id/iv1"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:text="@string/tv_ed_info"
            android:textSize="14sp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_light_gray"/>

    <RelativeLayout
        android:id="@+id/mLayoutDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv5"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_delete"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_toRightOf="@+id/iv5"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:text="@string/tv_delete"
            android:textSize="14sp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_light_gray"/>

</LinearLayout>